--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="header"></div>
     <div class="container-fluid">
         <div class="row">
-            <nav class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse" id="app-sidebar">
+            <nav class="col-md-3 col-lg-2 d-md-block sidebar collapse" id="app-sidebar">
                 <div v-html="sidebarContents.isActiveTimeTracker"></div>
             </nav>
 
