--- a/time-calculator.html
+++ b/time-calculator.html
@@ -30,7 +30,7 @@
 
     <div class="container-fluid">
         <div class="row">
-            <nav class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse" id="app-sidebar">
+            <nav class="col-md-3 col-lg-2 d-md-block sidebar collapse" id="app-sidebar">
                 <div v-html="sidebarContents.isActiveTimeConverter"></div>
             </nav>
 
