--- a/usage.html
+++ b/usage.html
@@ -29,7 +29,7 @@
     <div id="header"></div>
     <div class="container-fluid" id="app-sidebar">
         <div class="row">
-            <nav class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+            <nav class="col-md-3 col-lg-2 d-md-block sidebar collapse">
                 <div v-html="sidebarContents.isActiveUsage"></div>
             </nav>
 
