--- a/header.html
+++ b/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-secondary flex-md-nowrap p-0 shadow" id="header">
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-secondary flex-md-nowrap p-0 shadow" id="header">
     <div class="container-fluid">
         <a class="navbar-brand" href="index.html">Time Tracker GUI</a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
